<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.nurotron.ble_ui.UniversTextView
        android:id="@+id/pre_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/preprocessor"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="26sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:background="@drawable/secondary_bg"
            android:padding="20dip">
            <com.nurotron.ble_ui.UniversTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/custom"
                android:text="@string/custom"
                android:layout_margin="5dp"/>
            <com.nurotron.ble_ui.UniversEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/programText"
                android:background="@drawable/pp_custom_name_entry"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:maxLength="10"
                android:text="@string/p1"

                />


            <com.nurotron.ble_ui.UniversTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/mode"
                android:id="@+id/mode_title"
                android:layout_margin="5dp"/>
            <RadioGroup
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/mode_rich"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rich"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/CustomRadioBtn"
                    />

                <RadioButton
                    android:id="@+id/mode_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/CustomRadioBtn"

                    />
            </RadioGroup>
            <com.nurotron.ble_ui.UniversTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/input_title"
                android:text="@string/input"
                android:layout_margin="5dp"/>

            <RadioGroup android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/input_atm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mic"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                        />

                    <RadioButton
                        android:id="@+id/input_ma"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ma"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <RadioButton
                        android:visibility="gone"
                        android:id="@+id/input_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aux"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                        />
                    <RadioButton
                        android:id="@+id/input_mt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mt"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                    />
                    <RadioButton
                        android:id="@+id/input_bluetooth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tcoil"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <RadioButton
                        android:id="@+id/input_tcoil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tcoil"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </LinearLayout>
            </RadioGroup>
            <com.nurotron.ble_ui.UniversTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/ratio_title"
                android:text="@string/input_ratio"
                android:layout_margin="5dp"/>

            <RadioGroup android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/ratio_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r12"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                        />

                    <RadioButton
                        android:id="@+id/ratio_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r13"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:checked="true"
                        style="@style/CustomRadioBtn"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/ratio_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r15"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                        />
                    <RadioButton
                        android:id="@+id/ratio_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/r19"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        style="@style/CustomRadioBtn"
                        />

                </LinearLayout>

            </RadioGroup>
            <com.nurotron.ble_ui.UniversTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/ctone_title"
                android:text="@string/ctone"
                android:layout_margin="5dp"/>
            <RadioGroup
                android:id="@+id/ctone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/ctone_enable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/CustomRadioBtn"
                    />

                <RadioButton
                    android:id="@+id/ctone_disable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disable"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/CustomRadioBtn"
                    />
            </RadioGroup>
            <com.nurotron.ble_ui.UniversTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/noise_title"
                android:text="@string/noise"
                android:layout_margin="5dp"/>
            <RadioGroup
                android:id="@+id/noise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/noise_enable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/CustomRadioBtn"
                    />

                <RadioButton
                    android:id="@+id/noise_disable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disable"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/CustomRadioBtn"
                    />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</LinearLayout>