<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_layout"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include
        android:id="@+id/nu_action_bar"
        layout="@layout/partial_actionbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/backtohome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                />


            <ImageView
                android:id="@+id/left_arrow_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_arrow"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                />
            <com.nurotron.ble_ui.UniversTextView
                android:id="@+id/back_home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_home"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="45dp"
                />

            <com.nurotron.ble_ui.UniversTextView
                android:id="@+id/setting_center_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/action_settings"
                android:textSize="26dp" />


        </FrameLayout>
    </LinearLayout>



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_device"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:id="@+id/status"
        android:layout_marginTop="15dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sizes"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:id="@+id/text_size"
        />


    <Button
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/language"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/night_mode"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:id="@+id/night"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/troubleshoot"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:id="@+id/troubleshoot"
        />






</LinearLayout>