<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">
    <include
        android:id="@+id/nu_action_bar"
        layout="@layout/partial_actionbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/backToSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_arrow"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                />
            <com.nurotron.ble_ui.UniversTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_settings"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="35dp"
                />

            <com.nurotron.ble_ui.UniversTextView
                android:id="@+id/universTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/language"
                android:textSize="26dp" />


        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@drawable/secondary_bg"
        android:padding="20dip">

        <com.nurotron.ble_ui.UniversTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/language"
            android:layout_margin="5dp"/>

        <RadioGroup android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/chinese"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/chinese"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:checked="true"
                    style="@style/CustomRadioBtn"
                    />

                <RadioButton
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/english"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/CustomRadioBtn"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/spanish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/spanish"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/CustomRadioBtn"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>
        </RadioGroup>


    </LinearLayout>
</LinearLayout>